--- a/app/css/_footer.css
+++ b/app/css/_footer.css
@@ -1,1 +1,65 @@
- 
+footer {
+    background: url(../img/footerbg.jpg) top center no-repeat #243D54;
+    padding-top: 130px;
+    margin-top: 100px;
+}
+
+footer .footer-cols {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer .footer-cols a {
+    color: #fff;
+    text-decoration: none;
+}
+footer .footer-cols a:hover  {
+    text-decoration:underline;
+}
+footer .footer-cols li {
+    margin-bottom: 11px;
+}
+
+footer .footer-cols .col {}
+
+footer .footer-cols .popup-link {
+    color: #fff;
+    font-size: 30px;
+}
+
+footer .bottom {
+    /* background: #243D54; */
+    font-size: 12px;
+    font-weight: 500;
+    color: #BDBDBD;
+    padding: 80px 0 20px;
+}
+
+footer .bottom .bottom-inner {
+    border-top: 1px solid #BDBDBD;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0 0;
+}
+
+footer .bottom a {
+    color: inherit;
+    text-decoration: none;
+}
+
+footer .bottom a:hover {
+    text-decoration: underline;
+}
+
+footer .copy {
+}
+
+footer .copy-date {
+}
+
+@media (min-width: 1920px) {
+    footer {
+        background-size:100% auto;
+    }
+}
