--- a/app/css/_header.css
+++ b/app/css/_header.css
@@ -1,1 +1,87 @@
+ .big-container {
+    max-width: 1860px;
+    margin: auto;
+    padding: 0 40px;
+}
+
+ header {
+    padding: 65px 0 120px;
+}
+ header .big-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+ header .logo {
+    /* padding-top: 40px; */
+}
+
+ header .logo img {}
+
+ header .right {
+    display: flex;
+    align-items: CENTER;
+    line-height: 1;
+}
+
+ header .phone {
+    font-weight: 500;
+    font-size: 24px;
+    color: #283240;
+    text-decoration: none;
+    margin: 0 0 0 50px;
+    display: block;
+}
+
+
+ header .phone:hover {
+     text-decoration:underline;
+ }
+
  
+
+
+ header  .menu_btn {
+     font-weight: 600;
+     font-size: 10px;
+     line-height: 12px;
+     letter-spacing: 0.04em;
+     text-transform: uppercase;
+     text-decoration:none;
+     color: #283240;
+     display: block;
+     line-height: 1;
+     height: 30px;
+     margin-left: 50px;
+ }
+ 
+ header .menu_btn:after {
+     content: '';
+     display: block;
+     width: 100%;
+     background: #283240;
+     height: 3px;
+     margin: 5px 0 0;
+     box-shadow: 0px 8px 0 0px #283240;
+ }
+ .main_menu {
+    max-width: 680px;
+}
+ .main_menu .categories{
+    display: flex;
+    flex-wrap: WRAP;
+}
+ 
+
+  .main_menu .categories .col{
+ width:25%;
+}
+
+
+.main_menu .categories .title {
+    font-size:14px
+}
+ .main_menu .categories ul >li> a{
+         font-size: 11px;
+ }
