--- a/app/css/_sprite.css
+++ b/app/css/_sprite.css
@@ -16,15 +16,21 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 // HTML
 <i class="icon icon-home"></i>
 */
-.icon-check-green {
+.icon-document {
   background-image: url(../img/sprite.png);
-  background-position: 0px 0px;
+  background-position: 0px -29px;
+  width: 17px;
+  height: 23px;
+}
+.icon-li-check {
+  background-image: url(../img/sprite.png);
+  background-position: -29px 0px;
   width: 28px;
   height: 26px;
 }
-.icon-document {
+.icon-li-danger {
   background-image: url(../img/sprite.png);
-  background-position: -28px 0px;
-  width: 17px;
-  height: 23px;
+  background-position: 0px 0px;
+  width: 29px;
+  height: 29px;
 }
