--- a/app/html/partials/_header.html
+++ b/app/html/partials/_header.html
@@ -12,19 +12,16 @@
 <body>
     <header>
         <div class="big-container">
-            <a href="#" class="logo"><img src="../../img/logo.png" alt=""></a>
+            <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
             <div class="right">
-                <div class="popup-link">
-                    <img src="img/sprite.svg#arr-right" alt="" width="31" height="18">
+                <a href="#order" class="popup-link easybox">
+                    <svg class="icon-arrow">
+                        <use xlink:href="img/sprite.svg#arr-right"></use>
+                    </svg>
                     Получить консультацию
-                </div>
+                </a>
                 <a href="tel:84993242487" class="phone">8 499 324-24-87</a>
                 <a href="#menu" class="menu_btn easybox">меню</a>
             </div>
-
         </div>
-
-
     </header>
-
-    
