--- a/app/html/partials/_footer.html
+++ b/app/html/partials/_footer.html
@@ -51,6 +51,7 @@
 
 <link rel="stylesheet" href="js/easybox/easybox.css">
 <script src="js/easybox/easybox.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
