--- a/app/css/_base.css
+++ b/app/css/_base.css
@@ -157,6 +157,11 @@ svg {
   padding: 0 10px;
   margin: auto;
 }
+.big-container {
+    max-width: 1860px;
+    margin: auto;
+    padding: 0 40px;
+}
 
 a {
   color: #42699D;
@@ -203,9 +208,7 @@ h5,
   font-size: 24px;
 }
 
-section.content {
-  margin-bottom: 30px;
-}
+section.content {}
 
 p {
   margin-bottom: 11px;
@@ -562,7 +565,7 @@ body .slick-dots li.slick-active button {
 .title_popup{text-align:center;margin-bottom:10px;font-weight: 500;font-size: 25px;line-height: 1.3;}
 .sub_title_popup{text-align:center;margin-bottom:10px;line-height: 1.3;font-size: 18px;font-weight: 500;}
 .pop_up_box .product_title{text-align:center;margin-bottom:10px;font-weight:700;font-size:18px;letter-spacing:.03em;font-family:Adelle Cyrillic}
-.pop_up_box{width: 100%;max-width:100%;/* padding:38px 50px 10px; */font-size:18px;}
+.pop_up_box{max-width:100%;/* padding:38px 50px 10px; */font-size:18px;}
 .pop_up_box input{/* text-align:center */}
 .pop_up_box#call{width: 500px;}
 .pop_up_box .button{width:100%}
@@ -601,31 +604,39 @@ body .slick-dots li.slick-active button {
  
   h1,
   .h1 {
-    font-size: 24px
+      font-size:23px;
+        margin-bottom: 10px;
   }
 
   h2,
   .h2 {
-    font-size: 22px
+    font-size: 20px;
+    margin: 10px 0 20px;
   }
 
   h3,
   .h3 {
-    font-size: 20px
+    font-size: 18px
   }
 
   h4,
   .h4 {
-    font-size: 20px
+    font-size: 16px
   }
 
   h5,
   .h5 {
-    font-size: 18px
+    font-size: 15px
   }
   .input_row {
     margin-bottom: 10px;
   }
+  body {
+    font-size:14px;
+}
+.big-container {
+  padding: 0 20px;
+}
 }
 
 
