--- a/app/css/_base.css
+++ b/app/css/_base.css
@@ -140,7 +140,7 @@ body {
   font-size: 15px;
   line-height: 1.6;
   font-family: 'Inter', sans-serif;
-  min-width: 360px;
+  min-width: 320px;
   /* overflow: hidden; */
   color: #283240;
 }
@@ -152,15 +152,40 @@ svg {
 }
 
 .container {
-  max-width: 1230px;
+  max-width: 1280px;
   width: 100%;
-  padding: 0 10px;
+  padding: 0 40px;
   margin: auto;
 }
 .big-container {
     max-width: 1860px;
     margin: auto;
     padding: 0 40px;
+}
+.main-container {
+     max-width: 1860px;
+     margin: auto;
+     /* padding: 0 40px; */
+     padding-left: calc(50% - 640px);
+}
+@media (min-width: 1860px) {
+  .main-container{
+     padding-left: 330px;
+  }
+}
+@media (max-width: 1700px) {
+  .main-container{
+     /* padding-left: 10px; */
+  }
+}
+@media (max-width: 1220px) {
+  .main-container{
+     padding-left: 20px;
+     padding-right: 20px;
+  }
+  .container {
+    padding: 0 20px;
+  }
 }
 
 a {
@@ -451,9 +476,10 @@ strong {
 }
 
 .button:hover {
-  text-decoration: none;
-  color: #5F0A87;
-  background-color: #fff;
+  /* text-decoration: none; */
+  /* color: #5F0A87; */
+  /* background-color: #fff; */
+  text-decoration: underline;
 }
 
 .button.transparent {
@@ -539,6 +565,12 @@ body .slick-dots li.slick-active button {
   top: 0;
   background-position: -29px 0px;
 }
+.text-block ul.danger li:before{
+    background-position: 0px 0px;
+      width: 29px;
+  height: 29px;
+
+}
  
 .text-block ol li{
    position: relative;
@@ -565,25 +597,24 @@ body .slick-dots li.slick-active button {
 .title_popup{text-align:center;margin-bottom:10px;font-weight: 500;font-size: 25px;line-height: 1.3;}
 .sub_title_popup{text-align:center;margin-bottom:10px;line-height: 1.3;font-size: 18px;font-weight: 500;}
 .pop_up_box .product_title{text-align:center;margin-bottom:10px;font-weight:700;font-size:18px;letter-spacing:.03em;font-family:Adelle Cyrillic}
-.pop_up_box{max-width:100%;/* padding:38px 50px 10px; */font-size:18px;}
-.pop_up_box input{/* text-align:center */}
-.pop_up_box#call{width: 500px;}
+.pop_up_box{max-width:100%;padding: 20px 20px;font-size:18px;margin: AUTO;}
+ .pop_up_box input, .pop_up_box textarea {
+   background:transparent;
+ }
+ 
 .pop_up_box .button{width:100%}
 .pop_up_box#login{
     width: 400px;
 }
-.pop_up_box#director .button{width:100%}
+ 
 .pop_up_box textarea {
-    text-align:center;
     min-height: 50px;
     line-height: 1.6;
     padding: 10px;
 }
-
-.pop_up_box#fast-order{/* max-width:500px; */width: 500px;}
-.pop_up_box#cheaper{/* max-width:500px; */width: 500px;}
-.pop_up_box#compare {
-    max-width:400px;
+.pop_up_title {
+  text-align:center;
+  margin-bottom:30px
 }
  .input_row{position:relative;margin-bottom: 30px;padding-bottom:0;width:100%;}
 .flexeble{display:flex;align-items:center;}
@@ -592,6 +623,9 @@ body .slick-dots li.slick-active button {
 .input_row .agree{text-align:center;letter-spacing:.05em;padding:10px 0;line-height:1.4;font-size: 12px;}
 .pop_up_box .input_row {
   margin-bottom:15px;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
 }
 .input_row .agree a {
   text-decoration:underline;
@@ -644,16 +678,19 @@ input[type='text'], input[type='password'], input[type='tel'], input[type='email
     padding: 0 15px;
     margin-left: 0;
     margin-right: 0;
-    font-size: 14px;
     max-width: 100%;
     width: 100%;
     background: #fff;
-    line-height: 50px;
+    line-height: 48px;
     color: #000;
     margin-bottom: 0;
     font-family: 'Rubik', sans-serif;
     border: 1px solid #F5F5F9;
     box-sizing: border-box;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 textarea {
   min-height:170px;
@@ -662,9 +699,10 @@ textarea {
 ::-moz-placeholder{color:#828282}
 :-moz-placeholder{color:#828282}
 :-ms-input-placeholder{color:#828282}
+
 input.error ~ .error, textarea.error ~ .error{display:block}
 input.error + .placeholder,input.error:focus + .placeholder{color:red}
-input.error,textarea.error{border-color: red!important;color:red;}
+input.error,textarea.error{border-color: #E41414 !important;color: #E41414;}
 
 label.checkbox {display: block;color: #000000;padding-left: 32px;position: relative;margin-bottom: 12px;cursor: pointer;}
 label.checkbox span {
